Test rate increased. GUI application designed. Bonuses 1 and 2 completed.