@@ -3,7 +3,7 @@
 @cd /d "%~dp0"
 
 echo Running Application
-java -Djava.security.manager=allow -jar music-app\target\music-app-1.0-SNAPSHOT.jar
+java -jar music-app/target/music-app-1.0-SNAPSHOT.jar
 
 echo Operation Completed!
 pause
